--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 body {
   background: #eee;
-  margin: 0 0;
-  padding: 0 0;
+  margin: 0;
+  padding: 0;
   overflow-x: hidden;
 }
 
@@ -362,3 +362,8 @@ a:hover {
 .added {
   margin: 0 -50px 0 0 !important;
 }
+
+.color-change 
+{
+margin: 0 -50px
+} 
